--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/garage.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/garage.css
@@ -43,7 +43,7 @@
 .car__close {
     position: absolute;
     top: 38px;
-    right: -60px;
+    right: -61px;
     border-radius: 50%;
     background-color: #ffffff;
     box-shadow: 0px 0px 7.36px 0.64px rgba(0, 0, 0, 0.39);
@@ -69,7 +69,7 @@
 .number__message2{
     width: 25px;
     height: 25px;
-    background-image: url("/lk.thevalet.ru/localevalet.ru/local/templates/lk.thevalet.ru/img/layout/MESSAGE2.png");
+    background-image: url("/local/templates/lk.thevalet.ru/img/layout/MESSAGE2.png");
     background-position: center center;
     background-size: cover;
     display: flex;
@@ -87,27 +87,27 @@
         bottom: 0;
         width: 100%;
         height: 80%;
-    
+
         z-index: 4;
         background-color: #ffffff;
         border-radius: 5px 5px 0px 0px;
         box-shadow: 0px 0px 7.36px 0.64px rgba(0, 0, 0, 0.39);
-        box-sizing: border-box;        
+        box-sizing: border-box;
     }
     .garage-mobile__list {
         margin-bottom: 50px;
-        
+
     }
     .garage-mobile__item {
         text-align: center;
         border-bottom: 1px solid #C7C7C7;
         margin-bottom: 35px;
     }
-    
+
     .garage-block .car__profile {
         padding-bottom: 20px;
     }
-    
+
     .garage-mobile__string {
         font-size: 18px;
         line-height: 22px;
@@ -117,7 +117,7 @@
     }
     .garage__link {
         display: block;
-       
+
     }
     .garage__link img{
         width: 40%;
@@ -131,11 +131,11 @@
         border-radius: 50%;
         margin-bottom: 15px;
     }
-    
+
     .garage__add {
         text-align: center
     }
-    
+
     .add__text {
         font-size: 18px;
         line-height: 22px;
@@ -155,7 +155,7 @@
         justify-content: center;
         align-items: center;
     }
-    
+
     .car__close-icon {
         transform: rotate(90deg);
     }
