--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/brand.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/brand.css
@@ -1,5 +1,5 @@
 .global__brand{
-    height: 90.8%;
+    
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -24,9 +24,8 @@
 }
 
 .brand__block label {
-    width: 136px;
+    width: 100%;
     display: inline-block;
-    padding: 10px 251px 9px 10px;
     cursor: pointer;
     border-bottom: 1px solid #C7C7C7;
 }
@@ -46,6 +45,7 @@
     display: flex;
     justify-content: space-around;
     color: #fff;
+    padding: 30px 0 15px;
 }
 .button{
     width: 183px;
