--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/serviceListOnOrder.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/serviceListOnOrder.css
@@ -22,7 +22,7 @@
     justify-content: center;
     align-items: center;
     color: #ffffff;
-    font-size: 1rem;
+    font-size: 15px;
 }
 @media screen and (max-width: 767px) {
     .vlt_servise{
