Изменения от Дмитрия

--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/brand.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/brand.css
@@ -5,6 +5,7 @@
     flex-direction: column;
 }
 .choose__brand__block{
+    text-transform: uppercase;
     display: flex;
     justify-content: space-between;
     padding-bottom: 10px;
