--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/serviceListOnOrder.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/serviceListOnOrder.css
@@ -2,10 +2,8 @@
     padding-top: 5%;
 }
 .vlt_servise{
-    filter: grayscale(100%);
 }
 .vlt_servise.active{
-    filter: grayscale(0%);
 }
 .service__icon{
     position: absolute;
@@ -14,8 +12,9 @@
     z-index: 100;
 }
 .servise__name{
-    width: 100%;
-    height: 100%;
+    background: rgba(0,0,0, 0.6);
+    width: 202px;
+    height: 150px;
     position: absolute;
     top: 0;
     display: flex;
