--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
@@ -100,10 +100,26 @@ input::placeholder {
   right: 1rem;
   top: 1rem;
 }
+.beta {
+  border-radius: 10px;
+  position: absolute;
+  left: 87%;
+  top: 33px;
+  z-index: 1;
+  background: #ffffff;
+  color: #707070;
+  font-family: "Montserrat Regular";
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  background: #ffffff;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  padding: 3px 15px;
+}
 
-/*стили которые забыли внести верстальщик! По-этому их вносит Артур БЭКЕНД ПРОГРАММИСТ! в связи не с желание разбиратся в стилях где что по этому буду писать тут!*/
-.header__desktop{
-  margin-bottom: 36px;
+.header__desktop {
+  margin-bottom: 40px;
 }
 
 /*---------------------------------*/
@@ -126,6 +142,14 @@ input::placeholder {
 }
 /*----------------------------*/
 /*--Прописываем стили заказа--*/
+
+.no-margin {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
+
 .app {
   display: grid;
   grid-template-columns: 32rem 1fr;
@@ -180,9 +204,9 @@ input::placeholder {
 
 .chapter__title {
   font-size: 1.3rem;
-  margin-top: 20px;
-  margin-bottom: 1rem;
   font-weight: normal;
+  margin-bottom: 10px;
+  margin-top: 40px;
 }
 .button__hide {
   display: none;
