--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/menu.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/menu.css
@@ -1,97 +1,144 @@
-
-.menu{
-    top: 0;
-    left: 0rem;
-    width: 30rem;
-    height: 100%;
-    padding: 28px;
-    margin-bottom: 20px;
-    z-index: 3;
-    background-color: #ffffff;
-    box-sizing: border-box;
-    
+.menu {
+  top: 0;
+  left: 0rem;
+  width: 30rem;
+  height: 100%;
+  padding: 28px;
+  margin-bottom: 20px;
+  z-index: 3;
+  background-color: #ffffff;
+  box-sizing: border-box;
 }
 .menu__section {
-    position: absolute;
-    background-color: #ffffff;
-    width: 32rem;
-    z-index: 3;
-    top: 0;
-    left: 0;
-    padding: 28px;
-    box-sizing: border-box;
-    height: 100%;
-    transition: left ease-out 0.3s;
+  position: fixed;
+  background-color: #ffffff;
+  width: 32rem;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  height: 100%;
+  transition: left ease-out 0.3s;
 }
 .menu__close {
-    position: absolute;
-    right: 1rem;
-    top: 1rem;
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
 }
+.profile__exit {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 36px;
+}
+.profile__exit-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: #fd0e0e;
+  width: fit-content;
+  cursor: pointer;
+}
+
 .menu__profile {
-    text-align: center;
-    padding-top: 46px;
-    padding-bottom: 28px;
-    border-bottom: 1px solid #5a5959;
+  text-align: center;
+  padding-top: 64px;
+  padding-bottom: 28px;
+  border-bottom: 1px solid #5a5959;
 }
 .profile__img {
-    width: 97px;
-    height: 97px;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-bottom: 1rem;
+  width: 97px;
+  height: 97px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 1rem;
 }
 .profile__name {
-    font-size: 1.1rem;
-    text-transform: uppercase;
-    line-height: 22px;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  line-height: 22px;
 }
 .profile__link {
-    font-size: 10px;
-    color: #b0b0b0;
-    line-height: 12px;
+  font-size: 10px;
+  color: #b0b0b0;
+  line-height: 12px;
 }
 .profile__link:hover,
 .profile__link:focus {
-    color: #b0b0b0;
+  color: #b0b0b0;
 }
 .menu__list {
-    padding: 30px 0;
-    text-align: center;
+  padding: 30px 0;
+  text-align: center;
+  flex: 1 1 auto;
 }
 .menu__item {
-    background-color: #ffffff;
-    color: #000000;
-    border-radius: 5px;
-    cursor: pointer;
+  background-color: #ffffff;
+  color: #000000;
+  border-radius: 5px;
+  cursor: pointer;
 }
 .menu__item .menu__link {
-    color: #000000;
+  color: #000000;
+  margin: 0 auto 15px;
 }
 .menu__link {
-    display: block;
-    padding: 11px;
-    text-transform: uppercase;
-    font-size: 15px;
-    line-height: 18px;
-    margin-bottom: 15px;
+  display: block;
+  padding: 11px;
+  text-transform: uppercase;
+  font-size: 15px;
+  line-height: 18px;
+  margin-bottom: 15px;
+  transition: all 0.5s ease 0s;
 }
 .menu__link.active {
-    border-radius: 5px;
-    background-color: #000;
-    color: #fff;
+  border-radius: 5px;
+  background-color: #000;
+  color: #fff;
 }
 .menu__comm {
-    text-transform: none;
-    display: block;
-    color: #b0b0b0;
-    font-size: 10px;
-    line-height: 12px;
+  text-transform: none;
+  display: block;
+  color: #b0b0b0;
+  font-size: 10px;
+  line-height: 12px;
 }
 
+.menu__con {
+  overflow-y: scroll;
+  position: relative;
+  background: #fff;
+  z-index: 100;
+  top: 0;
+  height: 100%;
+}
+
+.menu__cont {
+  display: flex;
+  flex-direction: column;
+  margin: 0 28px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.menu__con::-webkit-scrollbar {
+  width: 5px; /* ширина всей полосы прокрутки */
+}
+
+.menu__con::-webkit-scrollbar-track {
+  background: transparent; /* цвет зоны отслеживания */
+}
+
+.menu__con::-webkit-scrollbar-thumb {
+  background-color: transparent; /* цвет бегунка */
+  border-radius: 20px; /* округлось бегунка */
+  border: 3px solid grey; /* отступ вокруг бегунка */
+}
 
 @media screen and (max-width: 767px) {
-.user__popup{
+  .user__popup {
     position: fixed;
     z-index: 10;
     top: 0;
@@ -101,13 +148,13 @@
     background-color: rgba(0, 0, 0, 0.5);
     opacity: 0;
     visibility: hidden;
-    transition: all 0.3s ease 0s
-}  
-.user__popup.open {
+    transition: all 0.3s ease 0s;
+  }
+  .user__popup.open {
     opacity: 1;
     visibility: visible;
-}
-.user__popup.open .menu{
+  }
+  .user__popup.open .menu {
     position: relative;
     background-color: #ffffff;
     width: 100%;
@@ -119,11 +166,11 @@
     box-sizing: border-box;
     transition: all ease-out 0.3s;
     opacity: 1;
-}
-.menu{
+  }
+  .menu {
     position: relative;
     background-color: #ffffff;
-    width: 100%;;
+    width: 100%;
     z-index: 3;
     top: 0;
     left: 0;
@@ -132,87 +179,105 @@
     height: 100%;
     transition: all ease-out 0.3s;
     margin-bottom: 20px;
-
-}
-.menu__section {
+  }
+  .menu__section {
     position: absolute;
     background-color: #ffffff;
-    width: 100%;;
+    width: 100%;
     z-index: 3;
     top: 0;
     left: 0;
-    padding: 28px;
     box-sizing: border-box;
     height: 100%;
     transition: all ease-out 0.3s;
-}
-.menu__close {
+  }
+  .menu__close {
     position: absolute;
     right: 1rem;
     top: 1rem;
-}
-.menu__profile {
+  }
+  .menu__profile {
     text-align: center;
     padding-top: 46px;
     padding-bottom: 28px;
     border-bottom: 1px solid #5a5959;
-}
-.profile__img {
+  }
+  .profile__img {
     width: 97px;
     height: 97px;
     object-fit: cover;
     border-radius: 50%;
     margin-bottom: 1rem;
-}
-.profile__name {
+  }
+  .profile__name {
     font-size: 1.1rem;
     text-transform: uppercase;
     line-height: 22px;
-}
-.profile__link {
+  }
+  .profile__link {
     font-size: 10px;
     color: #b0b0b0;
     line-height: 12px;
-}
-.profile__link:hover,
-.profile__link:focus {
+  }
+  .profile__link:hover,
+  .profile__link:focus {
     color: #b0b0b0;
-}
-.menu__list {
+  }
+  .menu__list {
     padding: 30px 0;
     text-align: center;
-}
-.menu__item {
+  }
+  .menu__item {
     background-color: #ffffff;
     color: #000000;
     border-radius: 5px;
     cursor: pointer;
-}
-.menu__item--active {
+  }
+  .menu__item--active {
     background-color: #000000;
     color: #ffffff;
-}
+  }
 
-.menu__item--active .menu__link {
+  .menu__item--active .menu__link {
     color: #ffffff;
     transition: left ease-out 0.3s;
-}
-.menu__item .menu__link {
+  }
+  .menu__item .menu__link {
     color: #000000;
-}
-.menu__link {
+  }
+  .menu__link {
     display: block;
     padding: 11px;
     text-transform: uppercase;
     font-size: 15px;
     line-height: 18px;
     margin-bottom: 15px;
-}
-.menu__comm {
+  }
+  .menu__comm {
     text-transform: none;
     display: block;
     color: #b0b0b0;
     font-size: 10px;
     line-height: 12px;
+  }
 }
+
+.chat__list {
+  display: flex;
+  flex-direction: column;
+}
+
+.chat__item:not(:last-child) {
+  border-bottom: 1px solid #c7c7c7;
+}
+
+.chat__link {
+  display: block;
+  padding: 18px 0 13px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  color: #000000;
+  text-transform: uppercase;
 }
