Востановление от тестового сервера Володя Артур Дима Эдуард на 08.07.2022

--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
@@ -280,6 +280,14 @@ input::placeholder {
   visibility: hidden;
   transition: all 0.5s ease 0s;
 }
+.button_nextt {
+  display: block;
+  width: 100%;
+  padding: 10px;
+}
+.button_nextt_con {
+  padding: 0;
+}
 .user__popup.open {
   opacity: 1;
   visibility: visible;
