Изменения от Дмитрия, Изменения от Артура 1)Заполнение данных об автомобиле заканчивается на этапе ввода госномера и "Далее" меняем на "Готово" 2)Если пользователь не авторизован при нажатии идёт редирект на страницу авторизации/регистрации(сделал редирект не работает надо разбираться) 3)Удалить авто из гаража(поменять на эту надпись) 4)Как только пользователь авторизовался, кнопка "мусорка" появилась 5)При нажатии на добавить сделан редирект но он почему то не работает надо разбираться. 6)Скрыты автомобили в гараже если пользователь не авторизован. 7)Добавлена кнопка Войти если пользователь не авторизован 8)отменил редирект. Редирект на newOrder.php и на оборот. 9)убраны кнопки назад и готово на car1.php

--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
@@ -282,11 +282,17 @@ input::placeholder {
 }
 .button_nextt {
   display: block;
-  width: 100%;
   padding: 10px;
+  border-radius: 5px;
+  background: grey;
+  pointer-events: none;
+  transition: all 0.3s ease 0s;
 }
 .button_nextt_con {
+  cursor: default;
   padding: 0;
+  background-color: transparent;
+  border-radius: 0;
 }
 .user__popup.open {
   opacity: 1;
