--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/orderPlanning.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/orderPlanning.css
@@ -1,3 +1,13 @@
+:root {
+    --c-theme-primary: #008FFD;
+    --c-theme-primary-accent: #CBE8FF;
+    --c-bg-primary: #D6DAE0;
+    --c-bg-secondary: #EAEBEC;
+    --c-bg-tertiary: #FDFDFD;
+    --c-text-primary: #1F1F25;
+    --c-text-secondary: #999FA6;
+}
+
 .order__popup--plan {
     z-index: 21;
     left: 65rem;
@@ -16,107 +26,111 @@
 
 
 
-.picker-window {
-    position: absolute;
-    border-top: 1px solid #d4d9d9;
-    border-bottom: 1px solid #d4d9d9;
-    height: 1.4em;
-    left: 0;
-    top: 50%;
-    transform: translateY(-65%);
-    width: 100%;
-    pointer-events: none;
-}
-
-.triangle {
-    content: "";
-    background: white;
-    height: 20px;
-    width: 20px;
-    position: absolute;
-    display: block;
-    bottom: -40px;
-    left: 50%;
-    transform: translateX(-50%) rotate(45deg);
-}
-
-.picker {
-    display: inline-grid;
-    box-shadow: 0 0.5vw 2vw -5px rgba(0, 0, 0, 0.2);
-    border-radius: 15px;
-    position: relative;
-    border-top: 2rem solid white;
-    border-bottom: 2rem solid white;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    background: white;
-    grid-template-columns: repeat(4, fit-content(500px));
-    font-size: calc(.5rem + 1.2vw);
-    font-feature-settings: "tnum";
-    font-weight: 400;
-}
-.picker:before, .picker:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2.2em;
-    pointer-events: none;
-}
-.picker:before {
-    top: -0.2em;
-    background: linear-gradient(white, rgba(255, 255, 255, 0.7));
-}
-.picker:after {
-    bottom: -0.2em;
-    height: 2.4em;
-    background: linear-gradient(rgba(255, 255, 255, 0.7), white);
-}
-.picker ul {
-    -ms-overflow-style: none;
-    max-height: 1.4em;
-    overflow-y: scroll;
-    margin-right: 1em;
-    -ms-scroll-snap-type: y mandatory;
-    scroll-snap-type: y mandatory;
-    padding-bottom: 3em;
-    padding-top: 3em;
-}
-.picker ul::-webkit-scrollbar {
-    display: none;
-}
-.picker li {
-    scroll-snap-align: center;
-    height: 1.4em;
-    text-align: right;
-    word-spacing: 0.2em;
-}
-
-.picker-day {
-    padding-right: 0.5em;
-}
-.picker-day span {
-    padding-left: 0.56em;
-}
-
-.button-container {
-    text-align: center;
-    padding-top: 3rem;
-    width: 100%;
-}
-
-.button-container button {
-    display: inline-block;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border: 1px solid #3676e8;
-    background: transparent;
-    color: #3676e8;
-    border-radius: 15px;
-    font-weight: 500;
-    padding: 1rem;
-    font-size: 1.1rem;
-    font-family: "San Francisco Text", sans-serif;
+.datepicker button {
+    font: inherit;
     cursor: pointer;
-    letter-spacing: 0.01em;
+}
+.datepicker button:focus {
+    outline: 0;
+}
+
+.datepicker {
+    width: 95%;
+    max-width: 350px;
+    background-color: var(--c-bg-tertiary);
+    border-radius: 10px;
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.2), 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+}
+
+.datepicker-top {
+    margin-bottom: 1rem;
+}
+
+.btn-group {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+    margin-top: -0.5rem;
+}
+
+.tag {
+    margin-right: 0.5rem;
+    margin-top: 0.5rem;
+    border: 0;
+    background-color: var(--c-bg-secondary);
+    border-radius: 10px;
+    padding: 0.5em 0.75em;
+    font-weight: 600;
+}
+
+.month-selector {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.arrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0;
+    background-color: #FFF;
+    border-radius: 12px;
+    width: 2.5rem;
+    height: 2.5rem;
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.25), 0 0 10px 0 rgba(0, 0, 0, 0.15);
+}
+
+.month-name {
+    font-weight: 600;
+}
+
+.datepicker-calendar {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-row-gap: 1rem;
+}
+
+.day, .date {
+    justify-self: center;
+}
+
+.day {
+    color: var(--c-text-secondary);
+    font-size: 0.875em;
+    font-weight: 500;
+    justify-self: center;
+}
+
+.date {
+    padding: 0;
+    width: 2.25rem;
+    height: 2.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    font-weight: 600;
+    border: 2px solid transparent;
+    background-color: transparent;
+    cursor: pointer;
+}
+.date:focus {
+    outline: 0;
+    color: var(--c-theme-primary);
+    border: 2px solid var(--c-theme-primary-accent);
+}
+
+.faded {
+    color: var(--c-text-secondary);
+}
+
+.current-day {
+    color: #FFF;
+    border-color: var(--c-theme-primary);
+    background-color: var(--c-theme-primary);
+}
+.current-day:focus {
+    background-color: var(--c-theme-primary-accent);
 }
