--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/popups.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/popups.css
@@ -103,8 +103,6 @@
 }
 
 .cardel__buttons {
-  display: flex;
-  gap: 30px;
   position: absolute;
   display: flex;
   align-items: center;
@@ -117,8 +115,24 @@
   font-size: 18px;
   line-height: 22px;
   color: #000000;
-  padding: 8px 64px;
+  width: 186px;
+  height: 38px;
   background: #eeeeee;
-  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
+  /* box-shadow: inset 1px rgba(0, 0, 0, 0.25); */
   border-radius: 5px;
+  transition: all 0.3s ease 0s;
+}
+.cardel__button:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transform: translate(-4px, -4px);
+  font-size: 19px;
+}
+
+.btn-yes:hover {
+  background: red;
+  color: #fff;
+}
+.btn-no:hover {
+  background-color: green;
+  color: #fff;
 }
