--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main_mobile.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main_mobile.css
@@ -1,14 +1,8 @@
-@media (min-width: 820px) and (max-width: 1024px) {
-  .nav_group {
-    display: none;
-  }
-  /*----------------------------*/
-  /*--Прописываем стили заказа--*/
+@media (max-width: 1024px) {
   .app {
     display: flex;
     flex-direction: column-reverse;
   }
-
   .header__mobile {
     display: block;
     top: 0;
@@ -20,6 +14,15 @@
     margin-bottom: -0.5rem;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
   }
+}
+
+@media (min-width: 820px) and (max-width: 1024px) {
+  .nav_group {
+    display: none;
+  }
+  /*----------------------------*/
+  /*--Прописываем стили заказа--*/
+
   .header__desktop {
     display: none;
     width: 0;
@@ -37,10 +40,6 @@
   }
   /*----------------------------*/
   /*--Прописываем стили заказа--*/
-  .app {
-    display: flex;
-    flex-direction: column-reverse;
-  }
 
   .header__mobile {
     display: block;
