сделал удаление авто  с "мой гараж", но будет работать только на боевом, на тестовом работает только скрипт.

--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
@@ -236,7 +236,7 @@ input::placeholder {
   align-items: center;
   background-color: #fff;
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  /* padding-bottom: 2rem; */
   margin-bottom: 15px;
 }
 
