--- a/local/templates/lk.thevalet.ru/css/garage.css
+++ b/local/templates/lk.thevalet.ru/css/garage.css
@@ -71,16 +71,12 @@
   border-radius: 50%;
   background-color: #ffffff;
   box-shadow: 0px 0px 7.36px 0.64px rgba(0, 0, 0, 0.39);
-  z-index: 1;
+  z-index: 200;
   width: 48px;
   height: 48px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.car__close-icon {
-  transform: rotate(180deg);
 }
 
 .number__message__item2 {
@@ -107,12 +103,12 @@
   color: #ffff;
 }
 
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
   .garage-block {
     position: relative;
     bottom: 0;
     width: 100%;
-    height: 80%;
+    height: 100%;
 
     z-index: 4;
     background-color: #ffffff;
@@ -169,18 +165,9 @@
     position: absolute;
     top: 20px;
     right: 20px;
-    border-radius: 50%;
     background-color: #ffffff;
     box-shadow: 0px 0px 7.36px 0.64px rgba(0, 0, 0, 0.39);
-    z-index: 1;
     width: 40px;
     height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .car__close-icon {
-    transform: rotate(90deg);
   }
 }
