--- a/local/templates/lk.thevalet.ru/css/main_mobile.css
+++ b/local/templates/lk.thevalet.ru/css/main_mobile.css
@@ -1,50 +1,29 @@
-@media (min-width: 820px) and (max-width: 1024px) {
-  .nav_group {
-    display: none;
-  }
-  /*----------------------------*/
-  /*--Прописываем стили заказа--*/
-  .app {
-    display: flex;
-    flex-direction: column-reverse;
-    height: 114.2vh;
-    width: 69.5vh;
-  }
-
-  .header__mobile {
-    display: block;
-    top: 0;
-    height: auto;
-    width: 100%;
-    background: rgb(255, 255, 255);
-    border-radius: 0 0 5px 5px;
-    z-index: 2;
-    margin-bottom: -0.5rem;
-    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
-  }
-  .header__desktop {
-    display: none;
-    width: 0;
-    height: 0;
-  }
+.beta-mob {
+  background: #ffffff;
+  color: #707070;
+  font-family: "Montserrat Regular";
+  text-align: center;
+  font-size: 19px;
+  line-height: 24px;
+  font-weight: bold;
+  box-shadow: 0px 0px 2px rgb(0 0 0 / 25%);
+  border-radius: 10px;
+  padding: 4px 12px;
 }
-
-@media screen and (max-width: 767px) {
-  /*--------------------------*/
-
-  /*---------------------------------*/
-  /*--Cтилизуем навигацию слайдеров--*/
-  .nav_group {
-    display: none;
+@media (max-width: 767px) {
+  body {
+    overflow-y: scroll;
   }
-  /*----------------------------*/
-  /*--Прописываем стили заказа--*/
   .app {
     display: flex;
     flex-direction: column-reverse;
-    height: 100vh;
   }
-
+  .nav_group {
+    display: none;
+  }
+  .d-3-none {
+    display: none;
+  }
   .header__mobile {
     display: block;
     top: 0;
@@ -132,7 +111,9 @@
   .button__hide {
     display: none;
   }
-
+  .serv-button {
+    width: 202px;
+  }
   .order-button {
     position: sticky;
     bottom: 0;
@@ -144,13 +125,20 @@
     background-color: #fff;
     z-index: 10;
   }
-
+  .spesh_con_plus img {
+    width: 60px;
+    height: 60px;
+  }
+  .pl_spesh {
+    align-self: center;
+  }
+  .data__auto {
+    padding-bottom: 0;
+  }
   .button__order {
-    background-color: #000000;
     width: 95%;
     height: 2.8rem;
     color: #ffffff;
-    padding: 10px;
     font-size: 18px;
     line-height: 20px;
     text-transform: uppercase;
@@ -161,13 +149,16 @@
     bottom: 10px;
   }
 
+  .button_nextt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .button__order--disabled {
     background-color: #c4c4c4;
     cursor: not-allowed;
   }
 
-  /*---------------------------------*/
-  /*--Прописываем стили гаража меню--*/
   .double__popup {
     position: fixed;
     z-index: 20;
@@ -210,49 +201,15 @@
     transition: all ease-out 0.3s;
     opacity: 1;
   }
-  /*--Стилизуем POP-UP второго уровня в "Бургер-меню" (Выезжающий слайдер влево)--*/
   .user__popup__lvl__2 {
-    position: fixed;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.3s ease 0s;
+    top: 100%;
   }
   .user__popup__lvl__2.open {
-    opacity: 1;
-    bottom: 0;
-    visibility: visible;
-    background-color: rgba(0, 0, 0, 0.5);
-    transition: all ease-out 0.3s;
-  }
-  .user__popup__lvl__2.open .user__popup__lvl__2__content {
-    position: relative;
-    top: 0;
     left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    z-index: 100;
-    background-color: #ffffff00;
-    transition: all ease-out 0.3s;
-    opacity: 1;
   }
-  .user__popup__lvl__2__content {
-    position: relative;
-    display: flex;
-    align-items: flex-end;
-    top: 100%;
-    width: 100%;
-    height: 100%;
-
-    background: #fff;
-    transition: left ease-out 0.3s;
-  }
-
   .order__popup {
     position: fixed;
     z-index: 100;
