--- a/local/templates/lk.thevalet.ru/css/garage.css
+++ b/local/templates/lk.thevalet.ru/css/garage.css
@@ -163,8 +163,8 @@
   }
   .car__close {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 13px;
+    left: 13px;
     background-color: #ffffff;
     box-shadow: 0px 0px 7.36px 0.64px rgba(0, 0, 0, 0.39);
     width: 40px;
